1. 在根目錄下新增Manager.cs 和 Initial.cs檔案作為暫定的framework. 2. 在gitigonre中新增/Python/Heng/id_map

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,9 @@ __pycache__/
 *$py.class
 
 # Heng
-Python/Heng/runs/
-Python/Heng/material/
-Python/Heng/**.png
-Python/Heng/**.jpg
-Python/Heng/**.json
+/Python/Heng/runs/
+/Python/Heng/material/
+/Python/Heng/id_map
 
 # Pytorch
 *.pt
