--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ __pycache__/
 **/[Bb]uilds/
 **/[Ll]ogs/
 **/[Uu]ser[Ss]ettings/
+**/OVRAssetBundles/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
